k8s/02-backend.yaml
# --- ПРИКАЗ О РАЗВЁРТЫВАНІИ БЭКЕНДА ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 2 # Две реплики для отказоустойчивости! Если одна ячейка падёт, другая подхватит знамя!
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: krasniy-kinoarxiv-backend
          image: your-dockerhub-username/krasniy-kinoarxiv-backend:latest # ТВОЙ ОБРАЗ!
          ports:
            - containerPort: 8080 # Tomcat слушает на 8080
---
# --- ВНУТРЕННЯЯ СВЯЗЬ ШТАБА: Сервис для бэкенда ---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 1917 # Сервис будет слушать на порту 1917
      targetPort: 8080 # И перенаправлять на 8080 в подах
  type: ClusterIP
